# DOBS-mysql-updates

./: .env.example  .gitignore  .pre-commit-config.yaml  app.py  config.py  dobsykjq_dms.sql  extensions.py  index.html  models.py  passenger_wsgi.py  pyproject.toml  requirements.txt  rtl_index.html
DB/: dobsykjq_driver_onboarding.sql  driver_onboarding_plain.sql  driver_platform_table_only.sql  driver_table_only.sql
blueprints/admin/: routes.py
blueprints/auth/: routes.py
blueprints/finance/: routes.py
blueprints/fleet/: routes.py
blueprints/hr/: routes.py
blueprints/ops_coordinator/: routes.py
blueprints/ops_manager/: routes.py
blueprints/ops_supervisor/: routes.py
blueprints/public/: routes.py
forms/: auth.py  common.py
instance/: dev.db
services/: admin_service.py  file_storage.py  hr_service.py
static/: dashboard-common.css  scripts.js  styles.css
templates/: dashboard.html  dashboard_finance.html  dashboard_fleet.html  dashboard_hr.html  dashboard_ops.html  dashboard_ops_coordinator.html  dashboard_ops_supervisor.html  login.html  register.html  reports.html  rtl--reports.html  rtl-reports.html  rtl_dashboard.html  rtl_dashboard_finance.html  rtl_dashboard_fleet.html  rtl_dashboard_hr.html  rtl_dashboard_ops.html  rtl_dashboard_ops_coordinator.html  rtl_dashboard_ops_supervisor.html  rtl_login.html  rtl_register.html  rtl_reports.html
tests/: conftest.py  test_auth.py  test_file_storage.py  test_health.py  test_hr_service.py  test_integration.py  test_login.py
utils/: auth.py  auth_utils.py  cache.py  email_utils.py  validation.py
(+114 files in other folders)
