[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "B", "I", "W", "C90", "N", "UP"]
ignore = ["E203", "W503"]
exclude = ["migrations", "venv", "__pycache__"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.isort]
combine-as-imports = true
known-first-party = ["app", "blueprints", "utils", "models", "extensions"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
